--- a/styles3.css
+++ b/styles3.css
@@ -1,6 +1,10 @@
- * {
-     margin: 0;
-     padding: 0;
+.center {
+    border: 5px solid #FFFF00;
+    text-align: center;
+}
+* {
+     margin: 5px;
+     padding: 5px;
  }
 .navbar {
     display: flex;
