--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 5px;
     background: pink;
     text-align: center;
 }
@@ -13,168 +13,38 @@ body{
     color: greenyellow;
 }
 
+html {
+    font-family: sans-serif;
+}
 
+form {
+    display: table;
+    margin: 0 auto;
+}
 
-/* * {*/
-/*     margin: 0;*/
-/*     padding: 0;*/
-/* }*/
+form div {
+    display: table-row;
+}
 
-/*.navbar {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    position: sticky;*/
-/*    top: 0;*/
-/*    cursor: pointer;*/
-/*}*/
+form label, form input {
+    display: table-cell;
+    margin-bottom: 10px;
+}
 
-/*.background {*/
-/*    background: black;*/
-/*    background-blend-mode: darken;*/
-/*    background-size: cover;*/
-/*}*/
+form label {
+    width: 200px;
+    padding-right: 5%;
+    text-align: right;
+}
 
-/*.nav-list {*/
-/*    width: 70%;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
+form input {
+    width: 300px;
+}
 
-/*.logo {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.logo img {*/
-/*    width: 180px;*/
-/*    border-radius: 50px;*/
-/*}*/
-
-/*.nav-list li {*/
-/*    list-style: none;*/
-/*    padding: 26px 30px;*/
-/*}*/
-
-/*.nav-list li a {*/
-/*    text-decoration: none;*/
-/*    color: white;*/
-/*}*/
-
-/*.nav-list li a:hover {*/
-/*    color: grey;*/
-/*}*/
-
-/*.rightnav {*/
-/*    width: 30%;*/
-/*    text-align: right;*/
-/*}*/
-
-/*#search {*/
-/*    padding: 5px;*/
-/*    font-size: 17px;*/
-/*    border: 2px solid grey;*/
-/*    border-radius: 9px;*/
-/*}*/
-
-/*.firstsection {*/
-/*    background-color: green;*/
-/*    height: 400px;*/
-/*}*/
-
-/*.secondsection {*/
-/*    background-color: blue;*/
-/*    height: 400px;*/
-/*}*/
-
-/*.box-main {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    color: black;*/
-/*    max-width: 80%;*/
-/*    margin: auto;*/
-/*    height: 80%;*/
-/*}*/
-
-/*.firsthalf {*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.secondhalf {*/
-/*    width: 30%;*/
-/*}*/
-
-/*.secondhalf img {*/
-/*    width: 70%;*/
-/*    border: 4px solid white;*/
-/*    border-radius: 150px;*/
-/*    display: block;*/
-/*    margin: auto;*/
-/*}*/
-
-/*.text-big {*/
-/*    font-family: 'Piazzolla', serif;*/
-/*    font-weight: bold;*/
-/*    font-size: 35px;*/
-/*}*/
-
-/*.text-small {*/
-/*    font-size: 18px;*/
-/*}*/
-
-/*.btn {*/
-/*    padding: 8px 20px;*/
-/*    margin: 7px 0;*/
-/*    border: 2px solid white;*/
-/*    border-radius: 8px;*/
-/*    background: none;*/
-/*    color: white;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*.btn-sm {*/
-/*    padding: 6px 10px;*/
-/*    vertical-align: middle;*/
-/*}*/
-
-/*.section {*/
-/*    height: 400px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    max-width: 90%;*/
-/*    margin: auto;*/
-/*}*/
-
-/*.section-Left {*/
-/*    flex-direction: row-reverse;*/
-/*}*/
-
-/*.paras {*/
-/*    padding: 0px 65px;*/
-/*}*/
-
-/*.thumbnail img {*/
-/*    width: 250px;*/
-/*    border: 2px solid black;*/
-/*    border-radius: 26px;*/
-/*    margin-top: 19px;*/
-/*}*/
-
-/*.center {*/
-/*    text-align: center;*/
-/*}*/
-
-/*.text-footer {*/
-/*    text-align: center;*/
-/*    padding: 30px 0;*/
-/*    font-family: 'Ubuntu', sans-serif;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    color: white;*/
-/*}*/
+form p {
+    display: table-caption;
+    caption-side: bottom;
+    width: 300px;
+    color: #f601fd;
+    font-style: italic;
+}
