--- a/styles3.css
+++ b/styles3.css
@@ -1,3 +1,5 @@
+/*$primaryBtn: */
+
 .center {
     border: 5px solid #FFFF00;
     text-align: center;
@@ -18,3 +20,13 @@
  div {
      background: rgba(0, 128, 0, 0.3)
  }
+
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+li { display: inline-block; }
+
